Fixed progress bar width being stuck on resize

--- a/exp/player.css
+++ b/exp/player.css
@@ -44,7 +44,6 @@ body
     display: flex;
     flex-direction: column;
     color: #f6f2f7;
-
     background-size: cover;
     background-image: url('agar_agar_artwork_1.jpg');
 }
@@ -153,7 +152,7 @@ input[type="image"]
 }
 
 #trackProgress {
-    width: 100%;
+    width: inherit;
     height: 6px;
     cursor: pointer;
     background: white;
@@ -243,15 +242,15 @@ input[type=range] {
     width: 100%;
     background: transparent;
   }
-  
+
   input[type=range]:focus {
     outline: none;
   }
-  
+
   input[type=range]::-ms-track {
     width: 100%;
     cursor: pointer;
-    background: transparent; 
+    background: transparent;
     border-color: transparent;
     color: transparent;
   }
@@ -264,7 +263,7 @@ input[type=range] {
     cursor: pointer;
     margin-top: -7px;
   }
-  
+
   input[type=range]::-moz-range-thumb {
     height: 20px;
     width: 8px;
@@ -280,11 +279,11 @@ input[type=range] {
     cursor: pointer;
     background: #f7e9fa;
   }
-  
+
   input[type=range]:focus::-webkit-slider-runnable-track {
     background:#d3c3d6;
   }
-  
+
   input[type=range]::-moz-range-track {
     width: 100%;
     height: 6px;
